httpbin/httpbin-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: httpbin
subsets:
- addresses:
  - ip: 35.170.216.115
  - ip: 34.230.193.231
  ports:
  - name: http-80
    port: 80
