httpbin/httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  ports:
  - name: http-80
    port: 80
#    targetPort: 80
