httpbin/httpbin-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-serviceentry
  labels:
    app: httpbin
spec:
  hosts:
  - httpbin
  - httpbin.default.svc.cluster.local
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http-80
    protocol: HTTP
  resolution: STATIC
  endpoints:
  - address: 35.170.216.115
    ports:
      http-80: 80
  - address: 35.170.216.115
    ports:
      http-80: 80
