httpbin/httpbin-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-virtualservice
  labels:
    app: httpbin
spec:
  hosts:
  - httpbin.default.svc.cluster.local
  gateways:
  - istio-system/istio-egressgateway
  - mesh
  http:
  - name: "httpbin"
    match:
    - name: "mesh"
      gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
    rewrite:
      authority: httpbin.default.svc.cluster.local
  - name: "httpbin"
    match:
    - name: "istio-egressgateway"
      gateways:
      - istio-system/istio-egressgateway
      port: 80
    route:
    - destination:
        host: httpbin.default.svc.cluster.local
        port:
          number: 80
